--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<!-- TODO
+    Random button
+    Add option to choose music folder, create taskbar menu open smaller window or something like that
+-->
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
