--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <nav class="navbar">
             <i id="step-backward" class="fa fa-step-backward fa-lg nav-item"></i>
-            <i id="play-pause" class="fa fa-play fa-lg nav-item"></i>
+            <i id="play-pause" class="fa fa-pause fa-lg nav-item"></i>
             <i id="step-forward" class="fa fa-step-forward fa-lg nav-item"></i>
             <i id="random" class="fa fa-random fa-lg nav-item"></i>
             <i id="repeat" class="fa fa-repeat fa-lg nav-item"></i>
